# ffmpeg-practice

./: .gitignore  CMakeLists.txt  acc.c  analyze_video.c  audio.pcm  av_common.c  av_common.h  main.c  pushstream.c  recode_video.c  record_video.c  record_video2.c  video.h  video_audio.h
